# bfl-hack-sirius

./: .env.example  .gitignore  README.md  demo.ipynb  pyproject.toml
examples/: all_styles.py  basic_morph.py  codex_streaming.py  interactive_director.py  preview_mode.py
src/sirius/: __init__.py  __main__.py  _anthropic_client.py  _bfl_client.py  _config.py  _runware_client.py  _types.py  animator.py  director.py  editor.py  exceptions.py  pipeline.py  progress.py
tests/: test_animator.py  test_director.py  test_editor.py  test_exceptions.py  test_pipeline.py
