[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sirius"
version = "0.1.0"
description = "AI image morphing pipeline using Claude Vision + FLUX.2 for BFL Hackathon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "image-morphing",
    "video-generation",
    "flux",
    "claude",
    "ai",
    "bfl-hackathon",
    "animation",
    "transitions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.3.0",
    "requests>=2.20.0,<3.0",
    "pillow>=9.0.0,<12.0",
    "imageio[ffmpeg]>=2.9.0",
    "runware>=0.1.0",
    "rich>=10.0.0,<14.0",
    "nest-asyncio>=1.5.0",
    # Constrain transitive deps for Google Colab compatibility
    "numpy>=1.22,<2.1",
    "websockets>=13.0,<15.1",
    "pydantic>=2.0,<=2.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/MarsZDF/sirius"
Repository = "https://github.com/MarsZDF/sirius"
"Bug Tracker" = "https://github.com/MarsZDF/sirius/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sirius"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=sirius",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true